# NESEmulatorCPP

./: .clang-format  .gitignore  LICENSE  README.md  a.out  compile_commands.json  meson.build
include/: SDL_backend.h  bus.h  cartridge.h  config.h  cpu_header.h  emulator_config.h  log.h  mapper.h  memory.h  ppu.h  tracer.h  virtual_screen.h
roms/: nestest.nes:Zone.Identifier  smb.txt
src/: Cartridge.cpp  Log.cpp  SDL_backend.cpp  address_logic.cpp  bus.cpp  cpu_core.cpp  cpu_header.h  emulator_config.h  inst_group_1.cpp  inst_group_2.cpp  inst_group_3.cpp  instructions_addressed  instructions_addressed.cpp  instructions_intrerrupts.cpp  instructions_single_byte.cpp  irregular_functions.cpp  logger.cpp  main_debug  main_debug.cpp  single_byte_instr.cpp  tracer.cpp  tracer.h  unittest.cpp
src/CPU/: address_logic.cpp  config.h  cpu_core.cpp  cpu_header.h  cycle_counting.cpp  instructions.cpp  instructions_addressed.cpp  instructions_intrerrupts.cpp  instructions_single_byte.cpp  main.cpp  tracer.cpp  unittest.cpp  unittest.h
src/Mappers/: mapper.cpp  mapper.h  mapper0.cpp  mapper1.cpp
src/Memory/: memory.h
src/PPU/: PPU.cpp  ppu.h
src/SDL/: SDL_backend.cpp
